fixed about spacing

--- a/static/style.sass
+++ b/static/style.sass
@@ -414,7 +414,7 @@ table
             text-indent: 0
     p
         padding-bottom: 3px
-        text-indent: 40px
+        text-indent: 30px
         &:first-child
             text-indent: 0
         &:last-child
@@ -431,18 +431,18 @@ table
     ul
         list-style: none
         li
-            padding-left: 40px
+            padding-left: 30px
     ol
-        margin-left: 40px
+        margin-left: 30px
     svg
         float: left
-        margin-left: -40px
-        padding: 2px 12px
+        margin-left: -30px
+        padding: 2px 7px
     .emo
         float: left
-        margin-left: -40px
+        margin-left: -30px
         text-align: center
-        width: 40px
+        width: 30px
 
 @media (max-width: 674px)
     .container
